--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -10,8 +10,10 @@
         </div>
         <div>
           <p><%= micropost.content %></p>
+          <%= render 'likes/like_button', micropost: @micropost,  user: current_user  %>
         </div>
         <div>
+          
           <% if current_user == micropost.user %>
             <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
           <% end %>
