--- a/app/views/likes/_like_button.html.erb
+++ b/app/views/likes/_like_button.html.erb
@@ -4,7 +4,7 @@
 <%= form_for(current_user.likes.find_by(micropost_id: micropost.id), html: { method: :delete }) do |f| %>
 
       
-<%= hidden_field_tag :micropost_id, user.id %>
+<%= hidden_field_tag :micropost_id, micropost.id %>
 
 <div class="col-sm-3">    
 <%= f.submit 'お気に入り解除', class: 'btn btn-danger btn-block' %>
@@ -19,7 +19,7 @@
 <%= form_for(current_user.likes.build) do |f| %>
 
       
-<%= hidden_field_tag :micropost_id, user.id %>
+<%= hidden_field_tag :micropost_id, micropost.id %>
 
 <div class="col-sm-3">         
 <%= f.submit 'お気に入り', class: 'btn btn-primary btn-block' %>
