--- a/app/views/users/_likes.html.erb
+++ b/app/views/users/_likes.html.erb
@@ -1,6 +1,8 @@
-<ul class="media-list">
-  <% microposts.each do |micropost| %>
-    <li class="media">
+<% if microposts.any? %>
+  <ul class="media-list">
+    <% microposts.each do |micropost| %>
+      <li class="media">
+
       <div class="media-left">
         <img class="media-object img-rounded" src="<%= gravatar_url(micropost.user, options = { size: 50 }) %>" alt="">
       </div>
@@ -10,16 +12,12 @@
         </div>
         <div>
           <p><%= micropost.content %></p>
-          <%= render 'likes/like_button', micropost: micropost,  user: current_user %>
+
+          </div>
+
         </div>
-        <div>
-          
-          <% if current_user == micropost.user %>
-            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
-          <% end %>
-        </div>
-      </div>
-    </li>
-  <% end %>
+      </li>
+    <% end %>
+  </ul>
   <%= paginate microposts %>
-</ul>
+<% end %>
