--- a/app/views/users/liked_microposts.html.erb
+++ b/app/views/users/liked_microposts.html.erb
@@ -48,15 +48,13 @@ Followers <span class="badge">
       <li class="
 <%= 'active' if current_page?(liked_microposts_user_path(@user)) %>
 ">
-<%= link_to liked_microposts_user(@user) do %>
+<%= link_to liked_microposts_user_path(@user) do %>
 Likes <span class="badge">
 <%= @count_liked_microposts %>
 </span>
 <% end %>
 </li>
     </ul>
-    
-<%= render 'users', users: @followings %>
-
+<%= render 'likes', microposts: @liked_microposts %>
   </div>
 </div>
