--- a/app/views/users/_likes.html.erb
+++ b/app/views/users/_likes.html.erb
@@ -12,6 +12,7 @@
         </div>
         <div>
           <p><%= micropost.content %></p>
+          <%= render 'likes/like_button' , micropost: micropost%>
 
           </div>
 
